# ln-vox

./: .gitignore  .rsyncignore  DESIGN.md  README.md  pyproject.toml
scripts/: run_pipeline.sh  s4_retry.sh  serve_mlx.sh  serve_vllm.sh  setup_dramabox.sh  voicebank_studio.py
src/lnvox/: cli.py  config.py  series.py
src/lnvox/ingest/: epub.py  text.py
src/lnvox/llm/: chunker.py  client.py  schemas.py
src/lnvox/llm/prompts/: characters_merge.jinja  characters_per_chapter.jinja  scene_beats.jinja  scene_boundaries.jinja  scene_directions.jinja  scenes.jinja  voice_match.jinja  voice_profiles.jinja  voice_target.jinja
src/lnvox/stages/: s1_characters.py  s2_scenes.py  s3_director.py  s4_tts.py  s5_mix.py  s6_sync.py
src/lnvox/tts/: dramabox_client.py  schema.py
src/lnvox/voices/: common_voice.py  manifest.py  matcher.py  schema.py
