[project]
name = "lnvox"
version = "0.1.0"
description = "Novel-to-audiobook AI pipeline (Gemma 4 + Dramabox)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "openai>=1.40",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
    "jinja2>=3.1",
    "beautifulsoup4>=4.12",  # EPUB XHTML parsing in lnvox.ingest.epub
]

[project.optional-dependencies]
serve = [
    # Linux/CUDA LLM phase. vLLM has no macOS wheels, so the whole extra
    # is marker-gated. The Apple Silicon equivalent is the `mlx` extra.
    "vllm>=0.19.0 ; sys_platform == 'linux'",
    "torch ; sys_platform == 'linux'",
]
mlx = [
    # Apple Silicon LLM phase: mlx_lm.server exposes an OpenAI-compatible
    # endpoint so LLMClient works unchanged. See DESIGN.md §11.
    "mlx-lm>=0.20 ; sys_platform == 'darwin'",
]
voice = [
    "soundfile>=0.12",
    "librosa>=0.10",
    "tqdm>=4.65",
]
tts = [
    # Dramabox is git-cloned (see scripts/setup_dramabox.sh) — its
    # requirements.txt is installed by that script and pins torch==2.8.
    # We deliberately don't pin torch here because vLLM requires a
    # newer torchaudio than Dramabox; the DramaboxClient monkey-patches
    # torchaudio.save() so version mismatches don't trip the WAV writer.
    "soundfile>=0.12",
    "huggingface-hub>=0.24",
]

[project.scripts]
lnvox = "lnvox.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lnvox"]

[tool.hatch.build.targets.wheel.force-include]
"src/lnvox/llm/prompts" = "lnvox/llm/prompts"

[tool.uv]
package = true

[tool.uv.sources]
# Linux-only: pull torch from the cu130 wheel index. macOS picks up the
# default PyPI wheel (MPS-capable), so leaving this unconditional would
# break `uv sync` on Apple Silicon. See DESIGN.md §11.
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
